kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy: {}
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: stavangler.azurecr.io/bratur/web:1.0.0
          imagePullPolicy: Always
          name: web
          resources: {}
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
